# Simu-CLI

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  HOSTING.md  README.md  docker-compose.yml  mvp-playground.html  render.yaml
.cargo/: config.toml
.github/: hosted-base-url.txt
.github/workflows/: ci.yml  deploy-render.yml  hosted-smoke.yml
crates/app/: Cargo.toml  Trunk.toml  index.html
crates/app/dist-embed/.stage/: app-2d321be076c4964f.js  app-2d321be076c4964f_bg.wasm
crates/app/embed/: index.html
crates/app/src/: api.rs  app.rs  auth.rs  lib.rs
crates/app/src/components/: cast_import.rs  confirm_dialog.rs  demo_settings_form.rs  embed_code_generator.rs  live_preview.rs  mod.rs  shell.rs  step_card.rs  step_editors.rs  theme_editor.rs
crates/app/src/components/charts/: funnel.rs  mod.rs  timeseries.rs
crates/app/src/pages/: analytics.rs  demo_editor.rs  demo_share.rs  demo_view.rs  demos.rs  docs.rs  embed_fallback.rs  embed_player.rs  landing.rs  mod.rs  projects.rs  publish.rs  settings.rs
crates/app/src/utils/: dnd.rs
crates/embed/: Cargo.toml  index.html
crates/embed/src/: animation.rs  api.rs  input_handler.rs  lib.rs  matching.rs  messaging.rs
crates/embed/src/components/: terminal.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
crates/server/src/handlers/: analytics.rs  auth.rs  billing.rs  common_errors.rs  dashboard.rs  demos.rs  mod.rs  owned_demo.rs  projects.rs
crates/server/src/middleware/: logging.rs  metrics.rs  mod.rs  rate_limit.rs  security_headers.rs
crates/server/src/services/: billing.rs  mod.rs  og_image.rs
crates/server/tests/: fixtures.rs  integration_tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: client.rs  error.rs  lib.rs  validation.rs
crates/shared/src/dto/: analytics_dto.rs  common_error_dto.rs  demo_dto.rs  mod.rs  project_dto.rs
crates/shared/src/models/: analytics.rs  common_error.rs  demo.rs  mod.rs  project.rs  user.rs
crates/shared/src/services/: cast_parser.rs  embed_generator.rs  mod.rs
dist-embed/: embed-69b9e66658ba1078.js  embed-69b9e66658ba1078_bg.wasm  embed-d3a85a73876bb483.js  embed-d3a85a73876bb483_bg.wasm  index.html
migrations/: 20260305180723_initial_schema.sql  20260305180724_projects.sql  20260305180725_demos.sql  20260305180726_analytics.sql  20260307143000_common_errors.sql  20260307143500_billing.sql
static/: bootstrap.js  embed-external-test.html  embed-local-test.html  embed-test.html  embed.js
style/: global.css  tailwind.config.js
