[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/app",
    "crates/embed",
    "crates/shared",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Leptos
leptos = { version = "0.8.17", features = [] }
leptos_router = { version = "0.8.12" }
leptos_meta = { version = "0.8.6" }
leptos_axum = { version = "0.8.8" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs & Time
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.13.2", features = ["json", "rustls-tls"] }

# Auth / sessions
axum-login = "0.18.0"
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
oauth2 = "5.0.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
dotenvy = "0.15"
url = "2"
urlencoding = "2"
dashmap = "6"
governor = "0.10.4"

# Size optimization for the WASM release build
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
