[package]
name = "embed"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
shared = { path = "../shared" }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "MessageEvent", "Document", "Element"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
