[package]
name = "embed"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
shared = { path = "../shared", default-features = false }
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
url = { workspace = true }
web-sys = { version = "0.3", features = ["Blob", "Document", "Element", "Location", "MessageEvent", "Navigator", "Request", "RequestInit", "RequestMode", "Window"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
