[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Our own shared crate
shared = { path = "../shared" }

# Workspace dependencies we need for the server
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

# Auth (we'll need these soon)
axum-login = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
validator = { version = "0.20.0" }
governor = { workspace = true }
dashmap = { workspace = true }